// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`css tag resolution > should transform a named import 1`] = `
"import { useSolidStyled as _useSolidStyled } from "solid-styled";

import { css } from 'solid-styled';

const sheet_1 = "c-f0b3b6fa-0";
const css_1 = "h1[s\\\\:c-f0b3b6fa-0]{color:red}";
export default function Example() {
  _useSolidStyled(sheet_1, 1, css_1);
  return <h1 s:c-f0b3b6fa-0>Hello World</h1>;
}
"
`;

exports[`css tag resolution > should transform a namespace import 1`] = `
"import { useSolidStyled as _useSolidStyled } from "solid-styled";

import * as styled from 'solid-styled';

const sheet_1 = "c-f0b3b6fa-0";
const css_1 = "h1[s\\\\:c-f0b3b6fa-0]{color:red}";
export default function Example() {
  _useSolidStyled(sheet_1, 1, css_1);
  return <h1 s:c-f0b3b6fa-0>Hello World</h1>;
}
"
`;

exports[`css tag resolution > should transform an aliased import 1`] = `
"import { useSolidStyled as _useSolidStyled } from "solid-styled";

import { css as styled } from 'solid-styled';

const sheet_1 = "c-f0b3b6fa-0";
const css_1 = "h1[s\\\\:c-f0b3b6fa-0]{color:red}";
export default function Example() {
  _useSolidStyled(sheet_1, 1, css_1);
  return <h1 s:c-f0b3b6fa-0>Hello World</h1>;
}
"
`;
